# simple-survey

./: .gitignore  Cargo.toml  README.md  cdm.json  deny.toml  dist.car  dot.json  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
.papi/: polkadot-api.json
.papi/descriptors/: generated.json  package.json
contracts/surveys/: Cargo.toml  lib.rs
src/: App.css  App.tsx  types.ts  utils.ts
src/lib/bulletin/: cid.ts  client.ts  index.ts  upload.ts
src/lib/contracts/: chain.ts  config.ts  index.ts  surveys.ts
src/lib/host/: accounts.ts  allowances.ts  connection.ts  detect.ts  index.ts  provider.ts
src/lib/tx/: submit.ts
