[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.package]
version = "0.1.0"
authors = ["Survey DApp"]
homepage = "https://polkadot.com/"
license = "GPL-3.0-only"
edition = "2024"

[workspace.dependencies]
pvm-contract-sdk = { git = "https://github.com/paritytech/cargo-pvm-contract", rev = "90f3582a999ee843f79c56378392cfae3c05f0f3", features = ["alloc"] }
polkavm-derive = "0.31"
picoalloc = "5.2"
