[package]
name = "surveys"
version.workspace = true
edition.workspace = true
description = "Decentralized survey contract — stores survey and response CIDs from Bulletin Chain"
authors.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "surveys"
path = "lib.rs"

[features]
abi-gen = ["pvm-contract-sdk/abi-gen"]

[package.metadata.cdm]
package = "@example/surveys"

[dependencies]
pvm-contract-sdk = { workspace = true }
polkavm-derive = { workspace = true }
picoalloc = { workspace = true }
